[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-dp"
version = "0.1.0"
description = "Python library for communicating with Unity DP UPS management cards"
readme = "README.md"
requires-python = ">=3.13.5"
license = {text = "MIT"}
authors = [
    {name = "Stone-Monarch", email = "low.plan3294@fastmail.com"}
]
keywords = ["ups", "unity", "dp", "power", "management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://gitlab.com/codepark-ca/unity-dp-ups-client"
Issues = "https://gitlab.com/codepark-ca/unity-dp-ups-client/-/issues"

[tool.setuptools]
py-modules = ["unity_dp"]